# wozpy

./: .coverage  .gitignore  LICENSE.md  Makefile  README.md  coverage.xml  pyproject.toml  sonar-project.properties
.github/workflows/: build_and_test.yaml
tests/: conftest.py  test_wozpy.py
tests/models/: test_models.py
tests/unit/: test_fetch_nummer_aanduiding_data.py  test_get_nummer_aanduiding_ids.py  test_get_woz_address_id.py  test_get_woz_value.py
tests/wozpy/: test_wozpy.py
wozpy/: __init__.py  woz.py  wozpy.py
wozpy/models/: models.py
wozpy/settings/: config.py
