[tool.poetry]
name = "wozpy"
version = "0.1.0"
description = ""
authors = ["wpeterw <off@on.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pydantic = "<2.0"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
