[tool.poetry]
name = "wozpy"
version = "0.1.3"
description = "Simple package to retrieve data from wozwaardeloket.nl"
authors = ["wpeterw <off@on.nl>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pydantic = ">2.0"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pydantic-settings = "^2.1.0"
requests-mock = "^1.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
